Cloud and Branch Connector/cloudformation/nested-zscc-deployment/zscalervpc.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >
  This template deploys a VPC with a public subnet, a workloads private subnet, NAT and Internet Gateways. 
  It also provisions a Linux Bastion host and Linux workload instance.
  

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label: 
          default: "My IP address"
        Parameters:
          - MyIP
      - Label:
          default: "EC2 Key Pair"
        Parameters:
          - KeyPairName

      - Label:
          default: "VPC Details"
        Parameters:
          - WorkloadEnvironmentName
          - CIDR
          - PublicCIDR
          - ZsCIDR
          - WorkloadCIDR
          - TgwCIDR
    
    ParameterLabels:
      MyIP:
        default: "My IP address to allow for SSH inbound to bastion"
      WorkloadEnvironmentName:
        default: "Name of the self-contained environment"
      KeyPairName:
        default: "Name of the key pair for use with bastion host and workload instances"
      CIDR:
        default: "VPC CIDR block must be in format like 10.0.0.0/16"
      PublicCIDR:
        default: "VPC CIDR block must be in format like 10.0.0.0/24"
      ZsCIDR:
        default: "VPC CIDR block must be in format like 10.0.1.0/24"
      WorkloadCIDR:
        default: "VPC CIDR block must be in format like 10.0.2.0/24"
      TgwCIDR:
        default: "VPC CIDR block must be in format like 10.0.3.0/24"

Parameters:
  MyIP:
    Description: >
      My IP address
    Type: String
    
  WorkloadEnvironmentName:
    Description: > 
      An environment name that is prefixed to resource names
    Type: String
    Default: "VPC"
  
  KeyPairName:
    Description: Key pair name
    Type: AWS::EC2::KeyPair::KeyName

  CIDR:
    Description: VPC CIDR Block
    Type: String
    Default: "10.0.0.0/16"

  PublicCIDR:
    Description: Public Subnet CIDR Block
    Type: String
    Default: "10.0.0.0/24"

  ZsCIDR:
    Description: Zscaler Subnet CIDR Block
    Type: String
    Default: "10.0.1.0/24"

  WorkloadCIDR:
    Description: Workload Subnet CIDR Block
    Type: String
    Default: "10.0.2.0/24"

  TgwCIDR:
    Description: TGW Subnet CIDR Block
    Type: String
    Default: "10.0.3.0/24"

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref CIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref WorkloadEnvironmentName

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref WorkloadEnvironmentName

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref PublicCIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${WorkloadEnvironmentName} Public Subnet

  ZSSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs  '' ]
      CidrBlock: !Ref ZsCIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${WorkloadEnvironmentName} ZS Subnet

  WorkloadSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs  '' ]
      CidrBlock: !Ref WorkloadCIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${WorkloadEnvironmentName} Workload Subnet

  TGWSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs  '' ]
      CidrBlock: !Ref TgwCIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${WorkloadEnvironmentName} TGW Subnet

  NatGatewayEIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayEIP.AllocationId
      SubnetId: !Ref PublicSubnet

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${WorkloadEnvironmentName} Public Routes

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet

  ZSRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${WorkloadEnvironmentName} ZS Routes

  DefaultZSRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref ZSRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  ZSSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref ZSRouteTable
      SubnetId: !Ref ZSSubnet

  WorkloadRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${WorkloadEnvironmentName} Workload Routes

  DefaultWorkloadRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref WorkloadRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  WorkloadSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref WorkloadRouteTable
      SubnetId: !Ref WorkloadSubnet

  TGWRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${WorkloadEnvironmentName} TGW Routes

  TGWSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref TGWRouteTable
      SubnetId: !Ref TGWSubnet

  WorkloadInstanceSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: "Allow-All-SG"
      GroupDescription: "Allow SSH and RDP from Bastion Host"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-AllowAllSG'
      
  BastionHostSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: "Bastion-Host-SG"
      GroupDescription: "Security group for bastion host"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref MyIP
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-BastionHostSG'

  SSMIAMRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      ManagedPolicyArns:
        - 'arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore'

  SSMProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Roles:
        - !Ref SSMIAMRole

  LinuxWorkloadInstance:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: '{{resolve:ssm:/aws/service/ami-amazon-linux-latest/al2023-ami-minimal-kernel-default-x86_64}}'
      InstanceType: t2.micro
      SubnetId: !Ref WorkloadSubnet
      IamInstanceProfile: !Ref SSMProfile
      KeyName: !Ref KeyPairName 
      SecurityGroupIds: 
        - !Ref WorkloadInstanceSG
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-Workload'
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          sudo yum update -y
          sudo yum install git -y
          sudo yum install cloud-init -y
          sudo yum install httpd.x86_64 -y
          sudo systemctl start httpd.service
          sudo systemctl enable httpd.service
          sudo echo "Private Workload 1" > /var/www/html/index.html
          curl -s https://packagecloud.io/install/repositories/ookla/speedtest-cli/script.rpm.sh | sudo bash
          sudo yum install speedtest -y
          echo "PS1=\"[\\u@Workload \\W]\\$ \"" >> /home/ec2-user/.bashrc
  
  BastionHost:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: '{{resolve:ssm:/aws/service/ami-amazon-linux-latest/al2023-ami-minimal-kernel-default-x86_64}}'
      InstanceType: t2.micro
      SubnetId: !Ref PublicSubnet
      IamInstanceProfile: !Ref SSMProfile
      KeyName: !Ref KeyPairName 
      SecurityGroupIds: 
        - !Ref BastionHostSG
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-BastionHost'
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          # Install updates
          yum update -y
          # Update prompt to reflect instance name
          echo "PS1=\"[\\u@BastionHost \\W]\\$ \"" >> /home/ec2-user/.bashrc

Outputs:
  
  WorkloadIP:
    Description: Workload Private IP
    Value: !GetAtt
      - LinuxWorkloadInstance
      - PrivateIp

  PublicBastionIP:
    Description: Bastion Host Public IP
    Value: !GetAtt
      - BastionHost
      - PublicIp

  VPC:
    Description: Workload VPC ID
    Value: !Ref VPC
    Export:
      Name: !Sub '${AWS::StackName}-VPCID'

  ZSSubnetID:
    Description: Workload Subnet ID
    Value: !Ref ZSSubnet
    Export:
      Name: !Sub '${AWS::StackName}-ZSSubnetID'
